# AI-Server

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
chat/: config.json
