[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
ollama-rs = { version = "0.3.5", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
async-stream = "0.3"
